--- a/index.html
+++ b/index.html
@@ -1,116 +1,121 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WebStudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <title>WedStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    
     <link rel="stylesheet" href="./style.css">
 </head>
-</html>
-    <!-- Шапка сторінки -->
+<body>    
+    <!-- шапка сторінки -->
     <header>
-        <nav>
-          <!-- Логотип -->
-          <a class="logo" href="./">WebStudio</a>
-          <!--Навігація -->
-          <ul>
+    <nav><!-- логотип -->
+        <a href="./" class="logo">Wed<span>Studio</a>
+        <!-- Навігація по сайту -->
+        <ul class="nav-list">
             <li class="nav-item">
-              <a class="nav-link" href="">Студія</a>
+                <a class="nav-link" href="">Студія</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"href="/portfolio.html">Портфоліо</a>
+                <a class="nav-link" href="./portfolio.html">Портфоліо</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link"href="">Контакти</a>
+                <a class="nav-link" href="">Контакти</a>
             </li>
-          </ul>
-        </nav>
+        </ul></nav>
         <!-- Контакти -->
-        <ul class="contracts-list">
-         <li class="contracts-item" >
-           <a class="contracts-link" href="">info@devstudio.com</a>
-         </li>
-         <li class="contracts-item">
-           <a class="contracts-link" href="">+38 096 111 11
-        </a>
-    </li>
-   </ul>
-  </header>
-<!-- Головний контент -->
-<main>
-      <!-- Секція герой -->
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button class="hero-button">
-        <button type="button">Замовити послугу </button>
-      </section>
-      <!-- Переваги -->
-      <section>
-        <h2>Переваги</h2>
+        <ul class="contacts-list">
+        <li class="contacts-item">
+            <a  href=""class="contacts-link">info@devstudio.com</a>
+        </li>
+        <li class="contacts-item">
+            <a  href="" class="contacts-link">+38 096 111 11 11</a>
+        </li>
+        </ul>
+    </nav>
+    </header>
+    <main>
+        <!-- секція герой -->
+        <section class="hero">
+            <h1>Ефективні рішення для вашого бізнесу</h2>
+            <button class="hero-button" type="button">Замовити послугу</button>
+        </section>
+        <!-- переваги -->
+    <section>
+        <h2 class="section-title">Переваги</h2>
         <ul>
             <li>
-        <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-        <p>
-Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-</li>
-<li><h3>ПУНКТУАЛЬНІСТЬ</h3>
-        </p>
-        <p>Увага до деталей!<br>
-            ПУНКТУАЛЬНІСТЬ<br>
-            ПЛАНУВАННЯ<br>
-            СУЧАСНІ ТЕХНОЛОГІЇ<br>
-            Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
-            Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</li>
-            <li>
-                <h3>ПЛАНУВАННЯ</h3>
-                    <p> Так само консультація з широким активом значною мірою зумовлює.</p>
-                
+                <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+                <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li>
-                <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                <p>
-                    Значимість цих проблем настільки очевидна, що реалізація планових завдань.
-                </p>
+            <li >
+                <h3 class="advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
+                <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            </li>
+            <li >
+                <h3 class="advantages-title">ПЛАНУВАННЯ</h3>
+                <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
+            </li>
+            <li >
+                <h3 class="advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
         </ul>
-        </section>
-        <section>
-            <h2>ЧИМ ЗАЙМАЄМОСЯ</h2>
-            <ul>
-<li>
-    <img src="./images/1.jpg" alt="">
-</li>
-<li>
-    <img src="./images/2.jpg" alt="">
-</li>
-<li>
-    <img src="./images/3.jpg" alt="">
-</li>
-            </ul>
-        </section>
-        <h1><b>Наша команда:</h1>
+    </section>
+    <section>
+        <h2 class="section-title">Чим ми займаємося</h2>
+        <ul>
+            <li><img src="./1.jpg" alt="Приклади робіт"></li>
+            <li><img src="./2.jpg" alt="Приклади робіт"></li>
+            <li><img src="./3.jpg" alt="Приклади робіт"></li>
+        </ul>
+    </section>
+    <section>
+        <h2 class="section-title">Наша команда</h2>
+        <ul>
+            <li>
+                <img src="./4.jpg" alt="Учасник команди">
+                <h3 class="name">Ігор Дем'яненко</h3>
+                <p class="job">Product Designer</p>
+            </li>
+            <li>
+                <img src="./5.jpg" alt="Учасник команди">
+                <h3 class="name">Ольга Рєпіна</h3>
+                <p class="job">Frontend Developer</p>
+            </li>
+            <li>
+                <img src="./6.jpg" alt="Учасник команди">
+                <h3 class="name">Микола Тарасов</h3>
+                <p class="job">Marketing</p>
+            </li>
+            <li>
 
-  <img src="./images/4.jpg" alt="" width="200">
-  <p>Ігор Дем'яненко</p>
-  <p>Product Designer</p>
-  <img src="./images/5.jpg" alt="" width="200">
-  <p>Ольга Рєпіна</p>
-  <p>Frontend Developer</p>
-  <img src="./images/6.jpg" alt="" width="200">
-  <p>Микола Тарасов</p>
-  <p>Marketing</p>
-  <img src="./images/7.jpg" alt="" width="200">
-  <p>Михайло Єрмаков</p>
-  <p>UI Designer</p>
-</section>
-<a href="WebStudio">Web-Studio</a>
-<address> м. Київ, пр-т Лесі Українки, 26 </address>
-<a href="">info@devstudio.com</a> <br>
-<a href="">+38 096 111 11 11</a>
-</main>
+<img src="./7.jpg" alt="Учасник команди">
+                <h3 class="name">Михайло Єрмаков</h3>
+                <p class="job">UI Designer</p>
+            </li>
+        </ul>
+    </section>
+    </main>
+    <footer>      
+         <a href="./" class="logo">Web<span>Studio</a></li>
+         <address> м. Київ, пр-т Лесі Українки, 26</address></li>
+        <ul class="contacts-list">
+            <li class="contacts-item">
+                <a href="" class="contacts-link">info@devstudio.com</a>
+            </li>
+            <li class="contacts-item">
+                <a href="" class="contacts-link">+38 096 111 11 11</a>
+            </li>
+        </ul>
+    </footer>  
 </body>
-</html>
