--- a/index.html
+++ b/index.html
@@ -49,13 +49,15 @@
     <main>
         <!-- секція герой -->
         <section class="hero">
+            <div  class="container">
             <h1>Ефективні рішення для вашого бізнесу</h2>
             <button class="hero-button" type="button">Замовити послугу</button>
         </section>
+        </div>
         <!-- переваги -->
-    <section>
+    <section class="section">
         <h2 class="section-title">Переваги</h2>
-        <ul>
+        <div class="container"></div> <ul>
             <li>
                 <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
@@ -72,9 +74,9 @@
                 <h3 class="advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
-        </ul>
+        </ul></div>
     </section>
-    <section>
+    <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
             <li><img src="./1.jpg" alt="Приклади робіт"></li>
@@ -82,34 +84,35 @@
             <li><img src="./3.jpg" alt="Приклади робіт"></li>
         </ul>
     </section>
+    <!-- наша команда -->
     <section>
         <h2 class="section-title">Наша команда</h2>
-        <ul>
-            <li>
-                <img src="./4.jpg" alt="Учасник команди">
-                <h3 class="name">Ігор Дем'яненко</h3>
-                <p class="job">Product Designer</p>
-            </li>
-            <li>
-                <img src="./5.jpg" alt="Учасник команди">
-                <h3 class="name">Ольга Рєпіна</h3>
-                <p class="job">Frontend Developer</p>
-            </li>
-            <li>
-                <img src="./6.jpg" alt="Учасник команди">
-                <h3 class="name">Микола Тарасов</h3>
-                <p class="job">Marketing</p>
-            </li>
-            <li>
+        <div class="container">          
+             <ul> <li>
+            <img src="./4.jpg" alt="Учасник команди">
+            <h3 class="name">Ігор Дем'яненко</h3>
+            <p class="job">Product Designer</p>
+        </li>
+        <li>
+            <img src="./5.jpg" alt="Учасник команди">
+            <h3 class="name">Ольга Рєпіна</h3>
+            <p class="job">Frontend Developer</p>
+        </li>
+        <li>
+            <img src="./6.jpg" alt="Учасник команди">
+            <h3 class="name">Микола Тарасов</h3>
+            <p class="job">Marketing</p>
+        </li>
+        <li>
 
 <img src="./7.jpg" alt="Учасник команди">
-                <h3 class="name">Михайло Єрмаков</h3>
-                <p class="job">UI Designer</p>
-            </li>
-        </ul>
+            <h3 class="name">Михайло Єрмаков</h3>
+            <p class="job">UI Designer</p>
+        </li>
+    </ul></div>
     </section>
     </main>
-    <footer class="footer">      
+    <footer class="section-footer">      
          <a href="./" class="logo">Web<span>Studio</a></li>
          <address> м. Київ, пр-т Лесі Українки, 26</address></li>
         <ul class="contacts-list">
