--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
 <body>    
     <!-- шапка сторінки -->
     <header>
-    <nav><!-- логотип -->
+        <div class="container header">
+            <nav>
+    <nav class="nav-list"><!-- логотип -->
         <a href="./" class="logo">Wed<span>Studio</a>
         <!-- Навігація по сайту -->
         <ul class="nav-list">
@@ -36,6 +38,7 @@
             </li>
         </ul></nav>
         <!-- Контакти -->
+        <div class="contacts-list">
         <ul class="contacts-list">
         <li class="contacts-item">
             <a  href=""class="contacts-link">info@devstudio.com</a>
@@ -46,6 +49,7 @@
         </ul>
     </nav>
     </header>
+    </div>
     <main>
         <!-- секція герой -->
         <section class="hero">
@@ -76,9 +80,10 @@
             </li>
         </ul></div>
     </section>
+    <!-- /* Чим ми займаємось */ -->
     <section class="section">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul>
+        <ul class="what-we-do">
             <li><img src="./1.jpg" alt="Приклади робіт"></li>
             <li><img src="./2.jpg" alt="Приклади робіт"></li>
             <li><img src="./3.jpg" alt="Приклади робіт"></li>
