--- a/index.html
+++ b/index.html
@@ -51,29 +51,30 @@
     </header>
     <main>
         <!-- секція герой -->
-        <section class="hero">
+        <section class="section hero">
             <div  class="container">
-            <h1>Ефективні рішення для вашого бізнесу</h2>
+            <h1>Ефективні рішення для вашого бізнесу </h2>
             <button class="hero-button" type="button">Замовити послугу</button>
         </section>
         </div>
         <!-- переваги -->
     <section class="section">
+        <div class="container">
         <h2 class="section-title">Переваги</h2>
-        <div class="container"></div> <ul>
-            <li>
+        <ul class="advantages">
+            <li class="item">
                 <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li >
+            <li class="item">
                 <h3 class="advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li >
+            <li class="item">
                 <h3 class="advantages-title">ПЛАНУВАННЯ</h3>
                 <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
             </li>
-            <li >
+            <li class="item">
                 <h3 class="advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
@@ -81,12 +82,14 @@
     </section>
     <!-- /* Чим ми займаємось */ -->
     <section class="section">
+        <div class="container">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="what-we-do">
-            <li><img src="./1.jpg" alt="Приклади робіт"></li>
-            <li><img src="./2.jpg" alt="Приклади робіт"></li>
-            <li><img src="./3.jpg" alt="Приклади робіт"></li>
+            <li><img class="img-what-we-do" src="./1.jpg" alt="Приклади робіт"></li>
+            <li><img class="img-what-we-do" src="./2.jpg" alt="Приклади робіт"></li>
+            <li><img class="img-what-we-do" src="./3.jpg" alt="Приклади робіт"></li>
         </ul>
+        </div>
     </section>
     <!-- наша команда -->
     <section>
@@ -98,7 +101,7 @@
             <p class="job">Product Designer</p>
         </li>
         <li>
-            <img src="./5.jpg" alt="Учасник команди">
+            <img  src="./5.jpg" alt="Учасник команди">
             <h3 class="name">Ольга Рєпіна</h3>
             <p class="job">Frontend Developer</p>
         </li>
