--- a/index.html
+++ b/index.html
@@ -96,23 +96,23 @@
         <h2 class="section-title">Наша команда</h2>
         <div class="container">          
              <ul> <li>
-            <img src="./4.jpg" alt="Учасник команди">
+            <img class="img" src="./4.jpg" alt="Учасник команди">
             <h3 class="name">Ігор Дем'яненко</h3>
             <p class="job">Product Designer</p>
         </li>
         <li>
-            <img  src="./5.jpg" alt="Учасник команди">
+            <img class="img" src="./5.jpg" alt="Учасник команди">
             <h3 class="name">Ольга Рєпіна</h3>
             <p class="job">Frontend Developer</p>
         </li>
         <li>
-            <img src="./6.jpg" alt="Учасник команди">
+            <img class="img"src="./6.jpg" alt="Учасник команди">
             <h3 class="name">Микола Тарасов</h3>
             <p class="job">Marketing</p>
         </li>
         <li>
 
-<img src="./7.jpg" alt="Учасник команди">
+<img class="img" src="./7.jpg" alt="Учасник команди">
             <h3 class="name">Михайло Єрмаков</h3>
             <p class="job">UI Designer</p>
         </li>
