--- a/w.s/index.html
+++ b/w.s/index.html
@@ -85,34 +85,35 @@
         <div class="container">
         <h2 class="section-title">Чим ми займаємося</h2>
         <ul class="what-we-do">
-            <li><img class="img-what-we-do" src="./1.jpg" alt="Приклади робіт"></li>
-            <li><img class="img-what-we-do" src="./2.jpg" alt="Приклади робіт"></li>
-            <li><img class="img-what-we-do" src="./3.jpg" alt="Приклади робіт"></li>
+            <li><img class="img-what-we-do" src="./w.s.images/1.jpg" alt="Приклади робіт"></li>
+            <li><img class="img-what-we-do" src="./w.s.images/2.jpg" alt="Приклади робіт"></li>
+            <li><img class="img-what-we-do" src="./w.s.images/3.jpg" alt="Приклади робіт"></li>
         </ul>
         </div>
     </section>
     <!-- наша команда -->
     <section>
+    
         <h2 class="section-title">Наша команда</h2>
         <div class="container">          
-             <ul> <li>
-            <img class="img" src="./4.jpg" alt="Учасник команди">
+             <ul class="team-list" > <li>
+            <img class="img" src="./w.s.images/4.jpg" alt="Учасник команди">
             <h3 class="name">Ігор Дем'яненко</h3>
             <p class="job">Product Designer</p>
         </li>
         <li>
-            <img class="img" src="./5.jpg" alt="Учасник команди">
+            <img class="img" src="./w.s.images/5.jpg" alt="Учасник команди">
             <h3 class="name">Ольга Рєпіна</h3>
             <p class="job">Frontend Developer</p>
         </li>
         <li>
-            <img class="img"src="./6.jpg" alt="Учасник команди">
+            <img class="img" src="./w.s.images/6.jpg" alt="Учасник команди">
             <h3 class="name">Микола Тарасов</h3>
             <p class="job">Marketing</p>
         </li>
         <li>
 
-<img class="img" src="./7.jpg" alt="Учасник команди">
+<img class="img" src="./w.s.images/7.jpg" alt="Учасник команди">
             <h3 class="name">Михайло Єрмаков</h3>
             <p class="job">UI Designer</p>
         </li>
