--- a/portfolio.html
+++ b/portfolio.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <header>
+      <div class="container header">
         <nav>
           <!-- Логотип -->
           <a href="./" class="logo">Wed<span>Studio</a>
           <!--Навігація -->
-          <ul class="list">
+          <ul class="nav-list">
             <li>
               <a class="link" href="./index.html">Студія</a>
             </li>
@@ -25,97 +26,110 @@
             </li>
           </ul>
         </nav>
-        <ul>
+        <ul >
          <li>
-           <a href="info@devstudio.com">info@devstudio.com</a>
+           <a class="addres" href="info@devstudio.com">info@devstudio.com</a>
          </li>
          <li>
-           <a href="+38 096 111 11">+38 096 111 11
+           <a class="addres" href="+38 096 111 11">+38 096 111 11
         </a>
     </li>
    </ul>
+      </div>
   </header>
-  <section>
   <main>
-    <ul>
-<li><button type="button">Усі</button></li>
-<li><button type="button">Веб-сайти</button></li>
-<li><button type="button">Додатки</button></li>
-<li><button type="button">Дизайн</button></li>
-<li><button type="button">Маркетинг</button><br></li>
+  <section class="section-buttons section">
+    <h2 class="section-title"></h2>
+    <div class="container">
+    <ul class="buttons-list">
+<li class="list-item"><button class="button" type="button">Усі</button></li>
+<li class="list-item"><button class="button"  type="button">Веб-сайти</button></li>
+<li class="list-item"><button class="button"  type="button">Додатки</button></li>
+<li class="list-item"><button class="button"  type="button">Дизайн</button></li>
+<li class="list-item"><button class="button"  type="button">Маркетинг</button><br></li>
     </ul>
-<ul>
-<li>  
+  </div>
+  </section>
+  <section class="link-section section">
+    <div class="container">
+    <ul class="links-list">
+<li class="foto-items">  
   <a href="">
-  <img src="./images/1.2.jpg" alt=""> 
-  <p>Технокряк</p>
-  <p>Веб-сайт</p>
-  </a></li>
-<li>
+  <img class="img" src="./portfolio.images/1.jpg" alt=""> 
+  <p class="project-title">Технокряк</p>
+  <p class="spesialiasation">Веб-сайт</p>
+  </a>
+</li>
+<li class="foto-items">
 <a href="">
-<li><img src="./images/2.2.jpg" alt="" width="300" >
-<p>Постер New Orlean vs Golden Star</p>
-<p>Дизайн</p>
+<li class="foto-items">
+  <img src="./portfolio.images/2.2.jpg" alt=""  >
+<p class="project-title">Постер New Orlean vs Golden Star</p>
+<p class="spesialiasation">Дизайн</p>
 </a>
 </li>
-<li>
+<li class="foto-items">
   <a href="">
-  <img src="./images/3.2.jpg" alt="" width="300">
-<p>Ресторан Seafood</p>
-<p>Додаток</p>
+  <img src="./portfolio.images/3.2.jpg" alt="" >
+<p class="project-title">Ресторан Seafood</p>
+<p class="spesialiasation">Додаток</p>
 </a>
 </li>
-<li>
+<li class="foto-items">
   <a href="">
-  <img src="/Web-Studio/images/img копія.jpg">
-<p>Проєкт Prime</p>
-<p>Маркетинг</p>
+  <img src="./portfolio.images/4.jpg">
+<p class="project-title">Проєкт Prime</p>
+<p class="spesialiasation">Маркетинг</p>
 </a>
 </li>
-<li>
+<li class="foto-items">
 <a href="">
-  <img src="/Web-Studio/images/img-2 копія.jpg">    
-<p>Проєкт Boxes</p>
-<p>Додаток</p>
+  <img src="./portfolio.images/5.jpg">    
+<p class="project-title">Проєкт Boxes</p>
+<p class="spesialiasation">Додаток</p>
 </a>
 </li>
-<li>
+<li class="foto-items">
   <a href="">
-  <img src="/Web-Studio/images/img-3 копія.jpg">
-<p>Inspiration has no Borders</p>
-<p>Веб-сайт</p>
+  <img src="./portfolio.images/6.jpg">
+<p class="project-title">Inspiration has no Borders</p>
+<p class="spesialiasation">Веб-сайт</p>
 </a>
 </li>
-<li>
+<li class="foto-items">
   <a href="">
-  <img src="/Web-Studio/images/img копія 2.jpg">
-<p>Видання Limited Edition</p>
-<p>Дизайн</p>
+  <img src="./portfolio.images/7.jpg">
+<p class="project-title">Видання Limited Edition</p>
+<p class="spesialiasation">Дизайн</p>
 </a>
 </li>
-<li>
+<li class="foto-items">
   <a href="">
-  <img src="/Web-Studio/images/img-2 копія 2.jpg">
-<p>Проєкт LAB</p>
-<p>Маркетинг</p>
+  <img src="./portfolio.images/8.jpg">
+<p class="project-title">Проєкт LAB</p>
+<p class="spesialiasation">Маркетинг</p>
 </a>
 </li>
-<li>
+<li class="foto-items">
   <a href="">
-  <img src="/Web-Studio/images/img-3 копія 2.jpg">
-<p>Growing Business</p>
+  <img src="./portfolio.images/9.jpg">
+<p class="project-title">Growing Business</p>
 <p>Додаток</p>
 </a></li>
 </ul>
-</section>
 </main>
-<footer>
-    <a href="/Web-Studio/">Web-Studio</a>
-    <address>м. Київ, пр-т Лесі Українки, 26</address>
-   <ul>
-   <li><a href="">info@example.com</a></li>
-    <li><a href="">+38 096 111 11 11</a></li>
+  <footer class="section-footer">      
+    <a href="./" class="logo">Web<span>Studio</a></li>
+    <address> м. Київ, пр-т Лесі Українки, 26</address></li>
+   <ul class="contacts-list">
+       <li class="contacts-item">
+           <a href="" class="contacts-link">info@devstudio.com</a>
+       </li>
+       <li class="contacts-item">
+           <a href="" class="contacts-link">+38 096 111 11 11</a>
+       </li>
    </ul>
-</footer>
+</footer>  
+
 </body>
 </html>
