--- a/portfolio.html
+++ b/portfolio.html
@@ -5,38 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet"  href="./portfolio.css">
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet"  href="./portfolio.css">  
+  
+  </head>
 <body>
-    <header>
-      <div class="container header">
+  <header>
+    <div class="container header">
         <nav>
-          <!-- Логотип -->
-          <a href="./" class="logo">Wed<span>Studio</a>
-          <!--Навігація -->
-          <ul class="nav-list">
-            <li>
-              <a class="link" href="./index.html">Студія</a>
-            </li>
-            <li>
-              <a class="link" href="/portfolio.html">Портфоліо</a>
-            </li>
-            <li>
-              <a class="link"href="">Контакти</a>
-            </li>
-          </ul>
-        </nav>
-        <ul >
-         <li>
-           <a class="addres" href="info@devstudio.com">info@devstudio.com</a>
-         </li>
-         <li>
-           <a class="addres" href="+38 096 111 11">+38 096 111 11
-        </a>
+<div class="nav-list"><!-- логотип -->
+    <a href="./" class="logo">Wed<span>Studio</a>
+    <!-- Навігація по сайту -->
+    <ul class="nav-list">
+        <li class="nav-item">
+            <a class="nav-link" href="">Студія</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="./portfolio.html">Портфоліо</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="">Контакти</a>
+        </li>
+    </ul></nav>
+    <!-- Контакти -->
+    <ul class="contacts-list">
+    <li class="contacts-item">
+        <a  href=""class="contacts-link">info@devstudio.com</a>
     </li>
-   </ul>
-      </div>
-  </header>
+    <li class="contacts-item">
+        <a  href="" class="contacts-link">+38 096 111 11 11</a>
+    </li>
+    </ul>
+</div>
+    </div>
+</header>
   <main>
     <section class="section-buttons section">
       <h2 class="section-title"></h2>
@@ -53,15 +62,11 @@
     <section class="link-section section">
       <div class="container">
       <ul class="links-list">
-  <li class="foto-items">  
-    <a href="">
     <img class="img" src="./portfolio.images/1.jpg" alt=""> 
     <p class="project-title">Технокряк</p>
     <p class="spesialiasation">Веб-сайт</p>
     </a>
   </li>
-  <li class="foto-items">
-  <a href="">
   <li class="foto-items">
     <img src="./portfolio.images/2.2.jpg" alt=""  >
   <p class="project-title">Постер New Orlean vs Golden Star</p>
