--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="container header">
             <nav>
-    <nav class="nav-list"><!-- логотип -->
+    <div class="nav"><!-- логотип -->
         <a href="./" class="logo">Wed<span>Studio</a>
         <!-- Навігація по сайту -->
         <ul class="nav-list">
@@ -46,7 +46,7 @@
             <a  href="" class="contacts-link">+38 096 111 11 11</a>
         </li>
         </ul>
-    </nav>
+    </div>
         </div>
     </header>
     <main>
@@ -92,26 +92,25 @@
         </div>
     </section>
     <!-- наша команда -->
-    <section>
-    
-        <h2 class="section-title">Наша команда</h2>
-        <div class="container">          
+    <section class="section">
+        <div class="container">      
+        <h2 class="section-title">Наша команда</h2>    
              <ul class="team-list" > <li>
             <img class="img" src="./w.s.images/4.jpg" alt="Учасник команди">
             <h3 class="name">Ігор Дем'яненко</h3>
             <p class="job">Product Designer</p>
         </li>
-        <li>
+        <li class="border">
             <img class="img" src="./w.s.images/5.jpg" alt="Учасник команди">
             <h3 class="name">Ольга Рєпіна</h3>
             <p class="job">Frontend Developer</p>
         </li>
-        <li>
+        <li class="border">
             <img class="img" src="./w.s.images/6.jpg" alt="Учасник команди">
             <h3 class="name">Микола Тарасов</h3>
             <p class="job">Marketing</p>
         </li>
-        <li>
+        <li class="border">
 
 <img class="img" src="./w.s.images/7.jpg" alt="Учасник команди">
             <h3 class="name">Михайло Єрмаков</h3>
