--- a/portfolio.html
+++ b/portfolio.html
@@ -48,14 +48,14 @@
 </header>
   <main>
     <section class="section-buttons section">
-      <h2 class="section-title"></h2>
       <div class="container">
+      <h2 class="section-title"></h2>
       <ul class="buttons-list">
-  <li class="list-item"><button class="button" type="button">Усі</button></li>
-  <li class="list-item"><button class="button"  type="button">Веб-сайти</button></li>
-  <li class="list-item"><button class="button"  type="button">Додатки</button></li>
-  <li class="list-item"><button class="button"  type="button">Дизайн</button></li>
-  <li class="list-item"><button class="button"  type="button">Маркетинг</button><br></li>
+  <li class="list-btn"><button class="button" type="button">Усі</button></li>
+  <li class="list-btn"><button class="button"  type="button">Веб-сайти</button></li>
+  <li class="list-btn"><button class="button"  type="button">Додатки</button></li>
+  <li class="list-btn"><button class="button"  type="button">Дизайн</button></li>
+  <li class="list-btn"><button class="button"  type="button">Маркетинг</button><br></li>
       </ul>
     </div>
     </section>
