--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <header>
         <div class="container header">
             <nav>
-    <div class="nav"><!-- логотип -->
+   <!-- логотип -->
         <a href="./" class="logo">Wed<span>Studio</a>
         <!-- Навігація по сайту -->
         <ul class="nav-list">
