--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
   <header>
     <div class="container header">
         <nav>
-<div class="nav-list"><!-- логотип -->
+<!-- логотип -->
     <a href="./" class="logo">Wed<span>Studio</a>
     <!-- Навігація по сайту -->
     <ul class="nav-list">
@@ -46,6 +46,8 @@
 </div>
     </div>
 </header>
+<main>
+  
   <main>
     <section class="section-buttons section">
       <div class="container">
