--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
     <section class="section our-team">
         <div class="container">      
         <h2 class="section-title">Наша команда</h2>    
-             <ul class="team-list" > <li>
+             <ul class="team-list" > <li class="border" >
             <img class="img" src="./w.s.images/4.jpg" alt="Учасник команди">
             <h3 class="name">Ігор Дем'яненко</h3>
             <p class="job">Product Designer</p>
@@ -123,10 +123,10 @@
          <a href="./" class="logo">Web<span>Studio</a></li>
          <address> м. Київ, пр-т Лесі Українки, 26</address></li>
         <ul class="contacts-list">
-            <li class="contacts-item">
+            <li class="contacts">
                 <a href="" class="contacts-link">info@devstudio.com</a>
             </li>
-            <li class="contacts-item">
+            <li class="contacts">
                 <a href="" class="contacts-link">+38 096 111 11 11</a>
             </li>
         </ul>
