--- a/portfolio.html
+++ b/portfolio.html
@@ -18,36 +18,39 @@
   </head>
 <body>
   <header>
-    <div class="container header">
-        <nav>
-<!-- логотип -->
-    <a href="./" class="logo">Wed<span>Studio</a>
-    <!-- Навігація по сайту -->
-    <ul class="nav-list">
-        <li class="nav-item">
-            <a class="nav-link" href="">Студія</a>
+        <div class="container header">
+            <nav>
+   <!-- логотип -->
+        <a href="./" class="logo">Wed<span>Studio</a>
+        <!-- Навігація по сайту -->
+        <ul class="nav-list">
+            <li class="nav-item">
+                <a class="nav-link" href="">Студія</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="./portfolio.html">Портфоліо</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="">Контакти</a>
+            </li>
+        </ul></nav>
+        <!-- Контакти -->
+        <ul class="contacts-list">
+        <li class="contacts-item">
+            <a  href=""class="contacts-link">info@devstudio.com</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="./portfolio.html">Портфоліо</a>
+        <li class="contacts-item">
+            <a  href="" class="contacts-link">+38 096 111 11 11</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" href="">Контакти</a>
-        </li>
-    </ul></nav>
-    <!-- Контакти -->
-    <ul class="contacts-list">
-    <li class="contacts-item">
-        <a  href=""class="contacts-link">info@devstudio.com</a>
-    </li>
-    <li class="contacts-item">
-        <a  href="" class="contacts-link">+38 096 111 11 11</a>
-    </li>
-    </ul>
+        </ul>
+    </div>
+        </div>
+    </header>
+    <main>
+  
 </div>
     </div>
 </header>
-<main>
-  
   <main>
     <section class="section-buttons section">
       <div class="container">
@@ -64,12 +67,14 @@
     <section class="link-section section">
       <div class="container">
       <ul class="links-list">
-    <img class="img" src="./portfolio.images/1.jpg" alt=""> 
-    <p class="project-title">Технокряк</p>
-    <p class="spesialiasation">Веб-сайт</p>
-    </a>
-  </li>
+        <li class="foto-items">
+          <a href="">
+<img src="./portfolio.images/1.jpg"> 
+<p  class="project-title">Технокряк</p>
+<p class="spesialiasation">Веб-сайт </p>
+          </a>
   <li class="foto-items">
+    <a href="">
     <img src="./portfolio.images/2.2.jpg" alt=""  >
   <p class="project-title">Постер New Orlean vs Golden Star</p>
   <p class="spesialiasation">Дизайн</p>
@@ -121,22 +126,23 @@
     <a href="">
     <img src="./portfolio.images/9.jpg">
   <p class="project-title">Growing Business</p>
-  <p>Додаток</p>
+  <p class="spesialiasation">Додаток</p>
   </a></li>
   </ul>
   </main>
-    <footer class="section-footer">      
-      <a href="./" class="logo">Web<span>Studio</a></li>
-      <address> м. Київ, пр-т Лесі Українки, 26</address></li>
-     <ul class="contacts-list">
-         <li class="contacts-item">
-             <a href="" class="contacts-link">info@devstudio.com</a>
-         </li>
-         <li class="contacts-item">
-             <a href="" class="contacts-link">+38 096 111 11 11</a>
-         </li>
-     </ul>
-  </footer>  
+    
+  <footer class="section-footer">      
+    <a href="./" class="logo">Web<span>Studio</a></li>
+    <address> м. Київ, пр-т Лесі Українки, 26</address></li>
+   <ul class="contacts-list">
+       <li class="contacts">
+           <a href="" class="contacts-link">info@devstudio.com</a>
+       </li>
+       <li class="contacts">
+           <a href="" class="contacts-link">+38 096 111 11 11</a>
+       </li>
+   </ul>
+</footer>  
   
   </body>
   </html>
