--- a/index.html
+++ b/index.html
@@ -62,19 +62,19 @@
         <div class="container">
         <h2 class="section-title">Переваги</h2>
         <ul class="advantages">
-            <li class="item">
+            <li class=" item icon-arials">
                 <h3 class="advantages-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                 <p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
             </li>
-            <li class="item">
+            <li class="item icon-clock">
                 <h3 class="advantages-title">ПУНКТУАЛЬНІСТЬ</h3>
                 <p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
             </li>
-            <li class="item">
+            <li class="item icon-diagram">
                 <h3 class="advantages-title">ПЛАНУВАННЯ</h3>
                 <p class="text">Так само консультація з широким активом значною мірою зумовлює</p>
             </li>
-            <li class="item">
+            <li class="item icon-astronaut">
                 <h3 class="advantages-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                 <p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
             </li>
